--- a/app/views/organized/parking_notifications/show.html.haml
+++ b/app/views/organized/parking_notifications/show.html.haml
@@ -5,8 +5,9 @@
     Parking Notification
     - if @parking_notification.unregistered_bike
       %small.text-warning
-        %em for
-        unregistered #{@bike.type}
+        for
+        %em
+          unregistered #{@bike.type}
 
 = render partial: "repeated_updates_information" # Render information about the result of create_and_send_repeats
 
