--- a/app/views/bikes/_bike_show_overlays.html.haml
+++ b/app/views/bikes/_bike_show_overlays.html.haml
@@ -39,48 +39,48 @@
                 %button.btn.btn-secondary{ 'data-dismiss' => 'modal', type: 'button' }
                   = t(".nevermind")
 
+- unless @bike.created_by_parking_notification # We don't want to show claiming info for parking notification unregistered bikes
+  - if current_user.present?
+    - if @bike.claimable_by?(current_user)
+      - modal_title = t(".your_bike", bike_type: @bike.type)
+      - modal_body = capture_haml do
+        .modal-body
+          %p= t(".were_honored_to_have_your_bike", bike_type: @bike.type)
+          %p= t(".claim_it_so_you_can_update_your_listing")
+        .modal-btn-footer
+          .row
+            .col-xs-6.col-xs-push-3
+              = link_to t(".claim_bike_type", bike_type: @bike.type), ownership_path(@bike.current_ownership), class: "btn btn-success"
 
-- if current_user.present?
-  - if @bike.claimable_by?(current_user)
-    - modal_title = t(".your_bike", bike_type: @bike.type)
-    - modal_body = capture_haml do
-      .modal-body
-        %p= t(".were_honored_to_have_your_bike", bike_type: @bike.type)
-        %p= t(".claim_it_so_you_can_update_your_listing")
-      .modal-btn-footer
-        .row
-          .col-xs-6.col-xs-push-3
-            = link_to t(".claim_bike_type", bike_type: @bike.type), ownership_path(@bike.current_ownership), class: "btn btn-success"
+    - elsif @bike.authorized?(current_user) && !@bike.authorized_by_organization?(u: current_user)
+      .bike-overlay-wrapper
+        .bike-edit-overlay
+          %p
+            -# If the bike user is actually the current bike owner, do this
+            - if @bike.user == current_user
+              - if @bike.user_hidden
+                %strong= t(".this_bike_type_is_hidden", bike_type: @bike.type)
+                = t(".no_one_can_see_it_but_you")
 
-  - elsif @bike.authorized?(current_user) && !@bike.authorized_by_organization?(u: current_user)
-    .bike-overlay-wrapper
-      .bike-edit-overlay
-        %p
-          -# If the bike user is actually the current bike owner, do this
-          - if @bike.user == current_user
-            - if @bike.user_hidden
-              %strong= t(".this_bike_type_is_hidden", bike_type: @bike.type)
-              = t(".no_one_can_see_it_but_you")
-
-            - if @bike.user?
-              - if @bike.abandoned
-                = t(".thank_you_for_recovering_this_bike_type", bike_type: @bike.type)
-              - elsif @bike.stolen
-                = t(".were_really_bummed_your_bike_type_was_stolen", bike_type: @bike.type)
-              - else
-                = t(".whoa_this_awesome_bike_type_is_yours", bike_type: @bike.type)
-
-              - if @bike.public_images.any?
-                = t(".add_some_more_information_about_it")
-              - else
-                - if @bike.stolen
-                  = t(".add_a_picture_so_people_know_what_to_look")
+              - if @bike.user?
+                - if @bike.abandoned
+                  = t(".thank_you_for_recovering_this_bike_type", bike_type: @bike.type)
+                - elsif @bike.stolen
+                  = t(".were_really_bummed_your_bike_type_was_stolen", bike_type: @bike.type)
                 - else
-                  = t(".add_a_picture_of_it")
-          - else
-            -# The bike has been sent to someone other than the current_user
-            = t(".you_sent_this_bike_html", bike_type: @bike.type, owner_email: @bike.current_ownership.owner_email)
-          = link_to  t(".edit"), edit_bike_path, class: "btn btn-secondary"
+                  = t(".whoa_this_awesome_bike_type_is_yours", bike_type: @bike.type)
+
+                - if @bike.public_images.any?
+                  = t(".add_some_more_information_about_it")
+                - else
+                  - if @bike.stolen
+                    = t(".add_a_picture_so_people_know_what_to_look")
+                  - else
+                    = t(".add_a_picture_of_it")
+            - else
+              -# The bike has been sent to someone other than the current_user
+              = t(".you_sent_this_bike_html", bike_type: @bike.type, owner_email: @bike.current_ownership.owner_email)
+            = link_to  t(".edit"), edit_bike_path, class: "btn btn-secondary"
 
 - if modal_title.present?
   -# This is for stolen modal or claim modal
