--- a/app/views/organized/parking_notifications/index.html.haml
+++ b/app/views/organized/parking_notifications/index.html.haml
@@ -55,17 +55,6 @@
           - else
             %em
               unknown bike ##{params[:search_bike_id]}
-    .col-sm-6.offset-lg-4.col-lg-2
-      %a.dropdown-toggle.btn.btn-outline-primary{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false" }
-        = @search_status.humanize
-        = @search_status == "all" ? " statuses" : ""
-      .dropdown-menu
-        - (ParkingNotification.statuses + ["all"]).each do |kind|
-          - if kind == "all" # Add a divider before all
-            .dropdown-divider
-          - kind_active = @search_status == kind
-          - kind_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_status: (kind_active ? nil : kind))
-          = link_to "#{kind.humanize} #{kind == 'all' ? 'statuses' : ''}", organization_parking_notifications_path(kind_link_params), class: "dropdown-item #{kind_active ? 'active' : ''}"
 
   .row.mt-2.mb-4
     .col-md-4.col-xs-6
@@ -80,6 +69,18 @@
       .text-right
         %a.gray-link#toggleSendRepeat{ href: "#sendRepeatNotifications", data: { toggle: "collapse", target: "#sendRepeatNotifications" } }
           retrieve/send repeat notification
+  .row.mt-2.mb-4
+    .col-sm-6.offset-lg-8.col-lg-4
+      %a.dropdown-toggle.btn.btn-outline-primary{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false" }
+        #{@search_status.humanize} notifications
+      .dropdown-menu
+        - (ParkingNotification.statuses + ["all"]).each do |kind|
+          - if kind == "all" # Add a divider before all
+            .dropdown-divider
+          - kind_active = @search_status == kind
+          - kind_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_status: (kind_active ? nil : kind))
+          - kind_display = "#{kind.humanize} notifications"
+          = link_to kind_display, organization_parking_notifications_path(kind_link_params), class: "dropdown-item #{kind_active ? 'active' : ''}"
 
   - # Form needs to wrap the table too
 
