--- a/app/views/admin/parking_notifications/index.html.haml
+++ b/app/views/admin/parking_notifications/index.html.haml
@@ -52,8 +52,7 @@
       = sortable "kind"
     %th Bike
     %th #
-    %th
-      = sortable "status"
+    %th Status
     %th
       %small
         = sortable "user_id", "last updator"
