--- a/app/views/organized/parking_notifications/_show_details.html.haml
+++ b/app/views/organized/parking_notifications/_show_details.html.haml
@@ -27,11 +27,10 @@
             - if @parking_notification.current?
               %em.less-strong
                 This is the current parking notification for this #{@bike.type}
-            - elsif @parking_notification.superseded?
+            - elsif @parking_notification.replaced?
               %em.less-strong
-                This parking notification is still active, but
+                This parking notification has been replaced by
                 = link_to "notification ##{@parking_notification.current_associated_notification.notification_number}", organization_parking_notification_path(@parking_notification.current_associated_notification, organization_id: current_organization.to_param)
-                is more recent
             - elsif @parking_notification.impounded?
               %strong.text-danger
                 This #{@bike.type} was impounded
