--- a/app/views/organized/parking_notifications/index.html.haml
+++ b/app/views/organized/parking_notifications/index.html.haml
@@ -70,7 +70,7 @@
         %a.gray-link#toggleSendRepeat{ href: "#sendRepeatNotifications", data: { toggle: "collapse", target: "#sendRepeatNotifications" } }
           retrieve/send repeat notification
   .row.mt-2.mb-4
-    .col-sm-6.offset-lg-8.col-lg-4
+    .col-sm-12
       %a.dropdown-toggle.btn.btn-outline-primary{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false" }
         #{@search_status.humanize} notifications
       .dropdown-menu
