--- a/app/views/organized/impound_records/_table.html.haml
+++ b/app/views/organized/impound_records/_table.html.haml
@@ -2,6 +2,7 @@
 - skip_bike ||= false
 - render_sortable ||= false
 - render_resolved_at ||= false
+- skip_status ||= false
 - skip_location ||= !current_organization.enabled?("impound_bikes_locations")
 
 - # TODO: add translations
@@ -31,10 +32,8 @@
           Location
     - unless skip_bike
       %th Bike
-    %th
-      - if render_sortable
-        = sortable "status"
-      - else
+    - unless skip_status
+      %th
         Status
     %th
       - if render_sortable
@@ -67,9 +66,10 @@
           %td
             - if impound_record.bike.present?
               = link_to organized_bike_text(impound_record.bike), bike_path(impound_record.bike, organization_id: current_organization.id)
-        %td
-          %em
-            = impound_record.status_humanized
+        - unless skip_status
+          %td
+            %em
+              = status_display(impound_record.status_humanized_short)
         %td
           = impound_record.user&.display_name&.truncate(20)
         - if render_resolved_at
