--- a/app/views/organized/impound_records/index.html.haml
+++ b/app/views/organized/impound_records/index.html.haml
@@ -39,20 +39,21 @@
     = pluralize(number_with_delimiter(@impound_records.total_count), "matching impound record")
     %em
       = humanized_time_range(@time_range)
-  .col-sm-6.offset-lg-4.col-lg-2
+  .col-sm-6.offset-lg-3.col-lg-3
     %a.dropdown-toggle.btn.btn-outline-primary{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false" }
-      = @search_status.humanize
+      = ImpoundRecord.statuses_humanized[@search_status.to_sym] || "All statuses"
     .dropdown-menu
-      - (%w[active all] + ImpoundRecord.statuses).each do |kind|
+      - (ImpoundRecord.statuses + ["all"]).each do |kind|
+        - if kind == "all" # Add a divider before all
+          .dropdown-divider
         - kind_active = @search_status == kind
         - kind_link_params = sortable_search_params.merge(organization_id: current_organization.id, search_status: (kind_active ? nil : kind))
-        = link_to kind.humanize, organization_impound_records_path(kind_link_params), class: "dropdown-item #{kind_active ? 'active' : ''}"
-        - if kind == "all" # Add a divider after all
-          .dropdown-divider
+        - display_status = ImpoundRecord.statuses_humanized[kind.to_sym] || "All statuses"
+        = link_to display_status, organization_impound_records_path(kind_link_params), class: "dropdown-item #{kind_active ? 'active' : ''}"
 
 
 - skip_resolved = (ImpoundRecord.active_statuses + ["active"]).include?(@search_status)
-= render partial: "/organized/impound_records/table", locals: { impound_records: @impound_records, render_sortable: true, render_resolved_at: !skip_resolved }
+= render partial: "/organized/impound_records/table", locals: { impound_records: @impound_records, render_sortable: true, render_resolved_at: !skip_resolved, skip_status: @search_status != "all" }
 
 .paginate-container.paginate-container-bottom
   = paginate @impound_records
