--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -220,7 +220,7 @@
           - if @bike.abandoned
             %p
               = t(".is_this_your_bike_send_proof_of_ownership")
-          - redirect = new_session_url(return_to: "bikes/#{@bike.id}?contact_owner=true") unless current_user.present?
+          - redirect = new_session_url(return_to: "/bikes/#{@bike.id}?contact_owner=true") unless current_user.present?
           #write_them_a_message.collapse{ class: ("in" unless @contact_owner_open), data: { redirect: redirect } }
             %a.btn.btn-primary.btn-lg{ href: '#new_stolen_message', 'aria-controls' => 'new_stolen_message', 'data-toggle' => 'collapse' }
               = t(".write_them_a_message")
