--- a/app/views/organized_mailer/graduated_bike.html.haml
+++ b/app/views/organized_mailer/graduated_bike.html.haml
@@ -1,12 +1,14 @@
 - user = @bike.user
 - bikes = @user&.rough_approx_bikes || []
 %h1
-  Will your
-  - if bikes.count > 1
-    bikes
-  - else
-    #{@bike.type}
-  be at #{@organization.short_name} next semester?
+  Renew Your Bike Permit
+  -# Temporarily commented out, for PSU initial email
+  -# Will your
+  -# - if bikes.count > 1
+  -#   bikes
+  -# - else
+  -#   #{@bike.type}
+  -# be at #{@organization.short_name} next semester?
 
 - organization_message_snippet = @organization.mail_snippets.enabled.graduated_bike_email.first
 - if @email_preview
@@ -20,11 +22,13 @@
 - if @retrieval_link_url.present?
   .mark-retrieved-box
     = link_to @retrieval_link_url, class: "binx-button" do
-      - if bikes.count > 1
-        My bikes
-      - else
-        This #{@bike.type}
-      will still be on campus
+      Click to renew
+      -# Temporarily commented out for PSU initial email
+      -# - if bikes.count > 1
+      -#   My bikes
+      -# - else
+      -#   This #{@bike.type}
+      -# will still be on campus
     %p
       %em
         Let
