Minor text change

--- a/app/views/organized_mailer/graduated_bike.html.haml
+++ b/app/views/organized_mailer/graduated_bike.html.haml
@@ -31,7 +31,7 @@
       -# will still be on campus
     %p
       %em
-        Let
-        %strong
-          = @organization&.name
-        know that your #{@bike.type} will remain on campus! Click the button above.
+        Your #{@bike.type} registration is set to expire soon.
+        %br
+        If you're remaining in the Centre Region Area or returning in the fall, please click the link above to keep your registration up to date.
+
