duplicate bike display

--- a/app/assets/stylesheets/revised/pages/bikes/show.scss
+++ b/app/assets/stylesheets/revised/pages/bikes/show.scss
@@ -144,6 +144,9 @@
         margin-bottom: 0.5rem;
       }
     }
+    .law-enforcement-wrapper {
+      border-top: 1px solid $gray-lightish;
+    }
   }
   .parking-notifications-wrap {
     background: #fdfdfd;
