--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -21,8 +21,7 @@
       = number_with_delimiter(Bike.count)
       bikes total
       %em
-
-        (#{number_with_delimiter(today)} today, #{number_with_delimiter(yesterday)} yesterday)
+        (#{number_with_delimiter(yesterday)} yesterday, #{number_with_delimiter(today)} today)
 
 = column_chart bikes, stacked: true, thousands: ",", defer: true
 
