--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -39,7 +39,7 @@
       - today = User.where("created_at >= ?", Time.current.beginning_of_day).count
       - yesterday = (User.where("created_at >= ?", Time.current.beginning_of_day - 1.day).count) - today
       %em
-        (#{number_with_delimiter(today)} today, #{number_with_delimiter(yesterday)} yesterday)
+        (#{number_with_delimiter(yesterday)} yesterday, #{number_with_delimiter(today)} today)
 
 %hr
 
@@ -55,4 +55,4 @@
       - today = Organization.where("created_at >= ?", Time.current.beginning_of_day).count
       - yesterday = (Organization.where("created_at >= ?", Time.current.beginning_of_day - 1.day).count) - today
       %em
-        (#{number_with_delimiter(today)} today, #{number_with_delimiter(yesterday)} yesterday)
+        (#{number_with_delimiter(yesterday)} yesterday, #{number_with_delimiter(today)} today)
