--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -199,11 +199,15 @@
             %a.convertTime{ href: edit_admin_ownership_url(ownership.id) }
               = l ownership.created_at, format: :convert_time
           %td
-            - u = ownership.creator
-            - if u.name.present?
-              = u.name
+            - creator = ownership.creator
+            - if creator.blank?
+              %em.text-warning user deleted
+              %span.only-dev-visible
+                \##{ownership.creator_id}
+            - elsif creator.name.present?
+              = creator.name
             - else
-              = u.email
+              = creator.email
           %td
             = ownership.owner_email
           %td.table-cell-check
