--- a/app/views/admin/organizations/index.html.haml
+++ b/app/views/admin/organizations/index.html.haml
@@ -55,10 +55,10 @@
       = hidden_field_tag :search_paid, @search_paid
       = hidden_field_tag :search_kind, params[:search_kind]
       = hidden_field_tag :search_pos, params[:search_pos]
-      .form-group.ml-auto.align-self-end
-        = text_field_tag :search_query, params[:search_query], placeholder: "Name/Location#{current_user.developer? ? '/Paid features' : '' }", class: "form-control mt-4"
-
-      = submit_tag 'Search', name: 'search', class: 'btn btn-primary mt-4 ml-2'
+      .form-group.ml-auto.align-self-end.mt-4
+        = text_field_tag :search_query, params[:search_query], placeholder: "Name/Location#{current_user.developer? ? '/Paid features' : '' }", class: "form-control", style: "min-width: 300px;"
+      .form-group.mt-4
+        = submit_tag "Search", name: "search", class: "btn btn-primary ml-2"
 
 = paginate @organizations, views_prefix: "admin"
 
